cabal-version:      3.4
name:               hgeometry-test
version:            1.0.0.0
synopsis:           A Test-suite for HGeometry to work around a cabal bug
description:
    Some input to some of the tests are specified in the form of
    ipe-files. This means the test-suite depends on
    hgeometry-ipe. However, hgeometry-ipe depends on hgeometry; cabal
    does not support that then a testsuite of hgeometry depends on
    hgeometry-ipe. This package is to work around that issue.

homepage:            https://fstaals.net/software/hgeometry
license:            MIT
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Geometry
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:
data-dir: data
data-files: **/*.ipe

tested-with:
    GHC == 9.2.5
  , GHC == 9.4.4
  , GHC == 9.6.1

source-repository head
  type:     git
  location: https://github.com/noinia/hgeometry

--------------------------------------------------------------------------------
-- common setup-extras
--     build-depends:
--         aeson                   >= 2.1

common setup
    ghc-options: -O2 -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
                -fspecialise-aggressively -fexpose-all-unfoldings

    build-depends:
        base                    >= 4.16.1.0      &&  < 5
      , hgeometry-combinatorial >= 1.0.0.0
      , hgeometry-vector        >= 1.0.0.0
      , hgeometry-point         >= 1.0.0.0
      , hgeometry-kernel        >= 1.0.0.0
      , hgeometry               >= 1.0.0.0
      , hgeometry-ipe           >= 1.0.0.0
      , hiraffe                 >= 0.1
      , containers              >= 0.6
      , vector                  >= 0.13
      , lens                    >= 5.2
      , deepseq                 >= 1.1
      , semigroupoids           >= 5
      , semigroups              >= 0.18
      , random                  >= 1.2
      , witherable              >= 0.4
      , linear                  >= 1.21
      , data-clist              >= 0.2
      , vinyl                   >= 0.14
      , data-default-class      ^>= 0.1
      , bytestring              >= 0.11
      , filepath                >= 1.4.100

      , ghc-typelits-natnormalise >= 0.7.7
      , ghc-typelits-knownnat     >= 0.7.6

    default-language: GHC2021

    default-extensions:
        DataKinds
      , TypeFamilies
      , GADTs
      , KindSignatures
      , ScopedTypeVariables
      , DerivingStrategies
      , DerivingVia
      , GeneralizedNewtypeDeriving
      , DeriveGeneric
      , DeriveFunctor
      , PatternSynonyms
      , TupleSections
      , LambdaCase
      , ViewPatterns
      , FunctionalDependencies

common quickcheck-setup
    ghc-options:
         -Wall
         -fno-warn-unticked-promoted-constructors
         -fno-warn-partial-type-signatures
         -fno-warn-missing-signatures
         -fno-warn-type-defaults
         -fno-warn-orphans
    build-depends:
        hspec                   >= 2.9
      , QuickCheck              >= 2.10
      , quickcheck-instances
      , hgeometry

--------------------------------------------------------------------------------
-- * Tests stup

test-suite hgeometry-test-hspec
  import:           setup, quickcheck-setup
  build-tool-depends: hspec-discover:hspec-discover
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Spec
      Paths_hgeometry_test
      Golden
      Polygon.Simple.InPolygonSpec
      Polygon.Convex.ConvexSpec
      Polygon.Convex.ConvexSpec
      VoronoiDiagram.VoronoiSpec

      -- LineSegmentSpec
  hs-source-dirs:   test
  build-depends:
         hspec-with-tempfile >= 0.1
